# Turret-Dodgeball

./: CMakeLists.txt  PROPOSAL.md  README.md
.eecs211/: README.md
.eecs211/cmake/: CMakeLists.txt
.eecs211/lib/catch/: CMakeLists.txt
.eecs211/lib/ge211/: CMakeLists.txt
.eecs211/share/: MinGW-SDL2.nsi
src/: controller.cpp  controller.h  main.cpp  model.cpp  model.h  player.cpp  player.h  view.cpp  view.h
test/: model_test.cpp
